# firmware-ci-poc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  NAMING_CONVENTIONS.md  README.md  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  commitlint.config.js
boards/: boards.yaml
cmake/: app_version.h.in
docker/: Dockerfile  Dockerfile.ci  Dockerfile.ncs
docs/: artifact-promotion-policy.md  device-health-preflight.md  final-demo-release.md  hil-job-summary.md  hil-matrix.md  hil-report-retention.md  nightly-hil-failure-notification.md  nightly-hil-regression.md  operator-runbook.md  regression-profile-hardening.md  release-quality-gate.md  release-rollback-policy.md  runner-maintenance-lock-recovery.md  stable-promotion-automation.md
firmware/: main.c
inventory/: devices.yaml  test_matrix.yaml
keys/: firmware-signing-public.pem
scripts/: build.sh  check_yaml.py  device_detect.sh  device_inventory.sh  device_preflight.py  discover_devices.py  docker_build.sh  docker_ci.sh  download_release_assets.py  flash.sh  generate_hil_matrix.py  lint.sh  notify_hil_failure.py  nrfutil_device.py  package.sh  promote_release.py  publish_hil_summary.py  resolve_test_profile.py  runner_maintenance.py  select_device.py  sign_firmware.py  validate.sh  validate_inventory.py  verify_release.py  verify_release_gate.py  with_device_lock.sh  write_hil_metadata.py  write_hil_report.py  write_release_metadata.py  write_release_status.py  write_stable_promotion.py
tests/: test_build.py  test_device_preflight.py  test_final_demo_release.py  test_hil_failure_notification.py  test_hil_job_summary.py  test_hil_matrix.py  test_hil_report.py  test_inventory.py  test_nightly_hil_workflow.py  test_operator_runbook.py  test_release_quality_gate.py  (+3 more)
(+12 files in other folders)
